<?xml version="1.0" encoding="utf-8"?>

<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chat"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:scrollbars="none"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/new_message"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/empty_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/new_message"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/chat_empty_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_no_messages"
                app:layout_constraintBottom_toTopOf="@id/new_message"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_no_messages" />

            <TextView
                android:id="@+id/chat_empty_state_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/chat_empty_state_title"
                android:textColor="@color/empty_state_title"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chat_empty_state" />

            <TextView
                android:id="@+id/chat_empty_state_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/chat_empty_state_msg"
                android:textColor="@color/empty_state_msg"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chat_empty_state_title" />

            <TextView
                android:id="@+id/chat_empty_state_extra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/chat_empty_state_extra"
                android:textColor="@color/yellow_green_crayola"
                android:textSize="13sp"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chat_empty_state_msg" />

        </LinearLayout>

        <EditText
            android:id="@+id/new_message"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/new_message_placeholder"
            android:imeOptions="actionSend"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
            app:layout_constraintRight_toLeftOf="@id/send_message_btn"
            app:layout_constraintTop_toBottomOf="@id/chat" />

        <ImageButton
            android:id="@+id/send_message_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:background="@drawable/btn_shape"
            android:contentDescription="@string/send_btn"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_send_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/new_message"
            app:layout_constraintRight_toRightOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/chat" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
